# TeleMGP

./: .coverage  .gitignore  README.md  TeleMGP0.py  TeleMGP_OLD.py  def_layout.json  pyproject.toml  telemetry_fit.py  telemetry_gpx.py
src/: ffmpeg_pipeline.py  map_renderer.py  moving_map.py  overlay_renderer.py  telemetry_extract.py  telemetry_gpmf.py  telemetry_gpmf_new.py  test_compare.py  test_render.py  video_helpers.py
src/gui/: __init__.py  def_layout.json  export_controller.py  hud_tuner_app.py  indicator_schemas.py  layout_manager.py  preview_controller.py  preview_widget.py  property_editor.py  render_controller.py  telemetry_manager.py  widgets.py
src/gui/dialogs/: statistics_dialog.py
src/gui/qt/: __init__.py  application.py  controller.py  main_window.py  models.py  signals.py
src/gui/qt/property_pages/: __init__.py
src/gui/qt/tabs/: __init__.py  load_tab.py  project_tab.py  render_tab.py  settings_tab.py
src/gui/qt/widgets/: __init__.py  data_stream_bar.py  property_editor.py  video_preview.py
src/gui/views/: center_panel.py  left_panel.py  right_panel.py
src/telem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/video/: Morning_Ride.fit  dane.fit
tests/: test_fit_registration.py  test_integration_real_data.py  test_layout_manager.py  test_telemetry_manager.py  test_widgets.py
video/: GL030032.json  pusty.json
